--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
      <br>
 
      <img src="HTML\images\c461566a9739abbca65baab2c445c180.webp" alt="descrição da imagem, logotipo da Html" width="60px">
+     <!-- lISTA NÃO NUMERADA -->
+      <UL>
+        <li>primeiro ponto</li>
+        <li>segundo ponto</li>
+      </UL>
+      <!-- lista numerada -->
+      <ol>
+        <li>primeiro</li>
+        <li>segundo</li>
+      </ol>
+
+      <!-- cria um bloco -->
+       <Div> isto é uma div</Div>
+
+       <!-- cria uma linha  -->
+        <span> isto é uma span </span>
 </body>
 </html>
