--- a/CSS/indexii.html
+++ b/CSS/indexii.html
@@ -7,21 +7,27 @@
 
     <link rel="stylesheet" href="estilo.css">
 
-    <!-- estilização com css GENERALIZADA dentro  do html-->
-    <style>
-        
-        p{ font-size: 40px;
-        color: chartreuse;}
-    </style>
 
 </head>
 <body>
-    <!-- não é recomendado utilizar a estilização em line -->
-    <h1 style="color: blueviolet; font-size: 80px">Aula 4 CSS</h1>
+   <header></header>
+   <main>
+    <h1 class="title">Aula 4 css</h1>
 
-    <h2>TESTE DE ESTILIZAÇÃO</h2>
-    <h3>estilização com link de css</h3>
+   <SEction id="principais-estilos">
+    <h2>Principais estilos CSS</h2> 
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur velit accusamus, numquam error non natus accusantium, facilis maxime sit fugiat officiis sed molestiae, perspiciatis eligendi illum! Eveniet beatae saepe dolore.</p>
+    <p class="paragrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. In aut quasi blanditiis ipsum? Quis perferendis necessitatibus omnis veniam deserunt provident repudiandae iste nulla accusantium accusamus recusandae, ut quibusdam autem minus!</p>
+
+    <p>outro paragrafo</p>
+   </SEction>
+
+   <section id="flexbox">
+    <h2> flexbox</h2>
+    <p>Isto aqui é uma sessão de flexbox</p>
+   </section>
+
+   </main>
+   <footer></footer>
 </body>
 </html>
