Alterações para aprendizado

--- a/CSS/indexii.html
+++ b/CSS/indexii.html
@@ -24,7 +24,12 @@
 
    <section id="flexbox">
     <h2> flexbox</h2>
-    <p>Isto aqui é uma sessão de flexbox</p>
+    <div class="container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+    </div>
    </section>
 
    </main>
