--- a/CSS/indexii.html
+++ b/CSS/indexii.html
@@ -26,9 +26,9 @@
     <h2> flexbox</h2>
     <div class="container">
         <div class="box"></div>
+        <div class="box-2"></div>
         <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box-2"></div>
     </div>
    </section>
 
